--- a/aws/requirements.txt
+++ b/aws/requirements.txt
@@ -4,3 +4,5 @@ djangorestframework==3.14.0
 mysql-connector-python==8.0.33
 mysqlclient==2.1.1
 requests==2.30.0
+botocore==1.29.135
+boto3==1.26.135
